# XiaomiRouterDeviceShow

./: .gitignore  CHANGELOG.md  IPV6_DETECT.MD  PROJECT_STRUCTURE.md  README.md  count_device_types.py  extract_iot_devices.py  extract_mac_addresses.py
local-sniffer/: README.md  network_scanner.py  pyproject.toml  requirements.txt
nextgen-network-manager/: Dockerfile  IMPORT_SUCCESS.md  devices.json  docker-compose.prod.yml  docker-compose.yml  import_devices.py  package-lock.json  package.json
nextgen-network-manager/backend/: Dockerfile  requirements.txt  start.sh
nextgen-network-manager/backend/app/: __init__.py  database.py  main.py
nextgen-network-manager/backend/app/api/: categories.py  devices.py
nextgen-network-manager/backend/app/models/: device.py
nextgen-network-manager/backend/app/schemas/: __init__.py  device.py
nextgen-network-manager/backend/app/static/: index.html
nextgen-network-manager/chrome-extension/: OPTIMIZATION_SUMMARY.md  build-extension.js  manifest.json  package.json  tsconfig.json  vite.config.ts
nextgen-network-manager/chrome-extension/src/: config.ts
nextgen-network-manager/chrome-extension/src/background/: background.ts  tsconfig.json
nextgen-network-manager/chrome-extension/src/content/: content.ts  tsconfig.json
nextgen-network-manager/chrome-extension/src/popup/: Popup.tsx  Settings.tsx  index.css  index.html  index.tsx
nextgen-network-manager/web-ui/: index.html  package-lock.json  package.json  vite.config.js
nextgen-network-manager/web-ui/src/: App.tsx
(+7 files in other folders)
